[package]
name = "controller"
version = "0.2.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
log = "*"
log4rs = { version = "*", features = ["gzip"] }
clap = "3.0.0-beta.2"
git-version = "*"
tonic = "*"
prost = "*"
tokio = { version = "*", features = ["full"] }
tokio-stream = "*"
cita_cloud_proto = { git = "https://github.com/cita-cloud/cita_cloud_proto" }
futures-util = "*"
rand = "*"
toml = "*"
serde = "*"
serde_derive = "*"
hex = "*"
inotify = "*"
crossbeam = "*"
backtrace = "*"

[dev-dependencies]
tempdir = "*"
